--- a/WebContent/course.html
+++ b/WebContent/course.html
@@ -20,7 +20,7 @@
 
 	
 	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/themestyle.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -310,7 +310,7 @@
 			<script src="js/scrollax.min.js"></script>
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 			<script src="js/google-map.js"></script>
-			<script src="js/main.js"></script>
+			<script src="js/thememain.js"></script>
 			
 		</body>
 		</html>
