--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -689,7 +689,7 @@
 <script src="js/bootstrap-datepicker.js"></script>
 <script src="js/scrollax.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/themegoogle-map.js"></script>
+<script src="js/google-map.js"></script>
 <script src="js/thememain.js"></script>
 
 </body>
