--- a/WebContent/addcourse.html
+++ b/WebContent/addcourse.html
@@ -5,13 +5,14 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="addcourseadmin.jsp" method="post">
-add courses here<br/><br/>
+<form action=uploadservlet method="post" enctype="multipart/form-data">
+add courses here <br/><br/>
 Course Title   :<input type="text" name="coursetitle" placeholder="course name/title" ><br/><br/>
 Instructor :<input type="text" name="instructor"placeholder="instructor" ><br/><br/>
 Category   :<input type="text" name="category" placeholder="category" ><br/><br>
 Total Enroll   :<input type="text" name="totalenroll" placeholder="total enroll" ><br/><br/>
-Fees :<input type="text" name="fees" placeholder="fees" ><br/><br/>         
+Fees :<input type="text" name="fees" placeholder="fees" ><br/><br/>
+ <input type="file" name="file"/><br/><br/>        
  <input type="submit" > <br/> <br/>         
 
 </form>
